--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                     <div class="project-info">
                         <h3>A Chat Application for Remote Message Exchange in C Language</h3>
                         <p>
-                            	● Developed a two-in-one server-client chat application utilizing TCP/IP protocol in C language in Eclipse and UNIX shell that is able to handle multiple socket connections at any runtime.<br>
+                            	● Developed a two-in-one server-client chat application utilizing TCP/IP protocol in C language in Eclipse and UNIX shell that is able to handle multiple socket connections at any runtime.<br><br>
 				● Extended program functionality with user commands, and handled possible system and user errors in the program.
 
                         </p>
