--- a/index.html
+++ b/index.html
@@ -218,19 +218,30 @@
     <div id="skills">
         <ul>
 	    <h4 class="resume-skills-cat font-weight-bold">Others</h4>
-	    <li>ARM</li>
+	    <li>Assembly Language - ARM</li>
             <li>Python</li>
             <li>C</li>
             <li>C++</li>
             <li>HTML</li>
             <li>PHP</li>
             <li>CSS</li>
+	    <li>Image Processing</li>
             <li>JavaScript</li>
+	    <li>PSpice</li>
+	    <li>Xilinx Vivado</li>
+	    <li>Xilinx Zynq-7000 SoC ZedBoard</li>
+   	    <li>LPC2148 Microcontroller</li>
+	    <li>Linux - Red Hat</li>
+	    <li>Windows Operating Systems</li>
+	    <li>Mac OS</li>
+	    <li>Project Management</li>
+	    <li>Event Planning</li>
 	    <li>JMP</li>
 	    <li>Wordpress</li>
-	    <li>Microsoft Office</li>
+	    <li>Microsoft Office Suite</li>
 	    <li>Adobe Photoshop</li>
 	    <li>Adobe Lightroom</li>
+	
         </ul>
     </div>
     <div id="resume-skill-item" class="certification">
