--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
 	    <li>Linux - Red Hat</li>
 	    <li>Windows Operating Systems</li>
 	    <li>Mac OS</li>
+	    <li>Leadership</li>
 	    <li>Project Management</li>
 	    <li>Event Planning</li>
 	    <li>JMP</li>
