--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
 	    <li>Xilinx Vivado</li>
 	    <li>Xilinx Zynq-7000 SoC ZedBoard</li>
    	    <li>LPC2148 Microcontroller</li>
-	    <li>Linux - Red Hat</li>
-	    <li>Windows Operating Systems</li>
+	    <li>Linux</li>
+	    <li>Windows OS</li>
 	    <li>Mac OS</li>
 	    <li>Leadership</li>
 	    <li>Project Management</li>
