--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
                 <h3>CSUN Dept. of Electrical and Computer Engineering</h3>
                 <h4>Graduate Assistant</h4>
                 <ul>
-			<li> Graded assignments and lab reports, and tabulate grades accordingly.</li>
-			<li> Assisted in lab, answering questions related to homework assignments and laboratory experiments.</li>
+			<li> Assisted approximately 200 students, offered constructive feedback based on students’ performance.</li>
+			<li> Led weekly lab and provided feedback to improve programming technique and practice for code efficiency.</li>
                 </ul>
             </div>
 	    
@@ -274,8 +274,8 @@
                 <h3>Intel Corporation - iCDG </h3>
                 <h4>Graduate Intern</h4>
                 <ul>
-                	<li> Designed and developed C# application that integrates JMP for product’s test data analysis.</li>
-			<li> Implemented Machine Learning for pattern detection in test data.</li>
+                	<li> Designed and developed C# windows application to expedite test data analysis, by incorporating JMP and various package managers, which the calculations and graphs are populated into an excel sheet.</li>
+			<li> Implemented Machine Learning for pattern detection to predict the distribution type of the test data.</li>
 		</ul>
             </div>
         </div>
@@ -295,7 +295,7 @@
                     <div class="project-info">
                         <h3>A Novel Approach for Efficient Implementation of Nucleus Detection and Segmentation Using Correlated Dual Color Space</h3>
                         <p>
-                            	● Researches an efficient algorithm for blood cell segmentation in microscopic blood images using digital image processing techniques, to improve and accelerate the diagnosis of different hematologic disorders.<br><br>
+                            	● Researched an efficient algorithm for blood cell segmentation in microscopic blood images using digital image processing techniques, to improve and accelerate the diagnosis of different hematologic disorders.<br><br>
 				● Proposes a novel technique that exploits the correlation between the RGB and CMYK color spaces, and yields segmented nuclei that are virtually congruent to the nuclei in the initial image. 
 
                         </p>
