--- a/index.html
+++ b/index.html
@@ -442,8 +442,8 @@
         <div id="experience2-timeline">
           
 	    <div data-date="Jan 2019 - May 2019">
-                <h3>College of Engineering & Computer Science (CECS) Mentorship Program </h3>
-                <h4>Student Coordinator</h4>
+                <h3>Student Coordinator</h3>
+                <h4>College of Engineering & Computer Science (CECS) Mentorship Program</h4>
                 <ul>
                 	<li> Identified the concerns and needs of the students within the College of Engineering and Computer Science, in and outside of the classroom.</li>
 			<li> Structured and piloted the program to improve students learning outcomes within the program.</li>
@@ -452,8 +452,8 @@
             </div>
 
 	    <div data-date="Nov 2017 - May 2019">
-                <h3>Leaders in Engineering and Computer Science - Student Engineers' Council </h3>
-                <h4>President</h4>
+                <h3>President</h3>
+                <h4>Leaders in Engineering and Computer Science - Student Engineers' Council</h4>
                 <ul>
 			<li> Developed a unified, comprehensive representation of students in the college.</li>
 			<li> Served in Student Advisory Board and assist the college in ABET accreditation.</li>
@@ -462,8 +462,8 @@
             </div> 
 		
 	    <div data-date="May 2017 - May 2019">
-                <h3>Tau Beta Pi, Engineering Honor Society </h3>
-                <h4>President</h4>
+                <h3>President</h3>
+                <h4>Tau Beta Pi, Engineering Honor Society</h4>
                 <ul>
 			<li> Re-chartered the chapter in the college, initiated over 140 members into the organization.</li>
 			<li> Coordinated officers, maintained chapter operations and defended constitution.</li>
@@ -473,8 +473,8 @@
             </div> 
 		
             <div data-date="Jan 2017 - May 2019">
-                <h3>CSUN Mentorship Program</h3>
-                <h4>Peer Mentor</h4>
+                <h3>Peer Mentor</h3>
+                <h4>CSUN Mentorship Program</h4>
                 <ul>
                 	<li> Impacted assigned mentees positively by serving as a social and academic role model.</li>
 			<li> Helped set goals and offer support through referral of resources available on campus.</li>
@@ -483,8 +483,8 @@
             </div>
 		
 	    <div data-date="May 2016 - May 2019">
-                <h3>New Student Orientation (NSO) </h3>
-                <h4>Matador Mentor</h4>
+                <h3>Matador Mentor</h3>
+                <h4>New Student Orientation (NSO)</h4>
                 <ul>
 			<li> Mentored incoming orientation leaders and provide support to the NSO Leadership.</li>
 			<li> Welcomed and acclimated new students to the university environment and culture.</li>
@@ -492,8 +492,8 @@
             </div> 
 
 	    <div data-date="Sept 2015 - Apr 2019">
-                <h3>Unified We Serve </h3>
-                <h4>Volunteer</h4>
+                <h3>Volunteer</h3>
+                <h4>Unified We Serve</h4>
                 <ul>
 			<li> Volunteered in various activities on and off campus as a whole.</li>
 			<li> Promoted community engagements and awareness.</li>
@@ -501,8 +501,8 @@
             </div> 		
 
 	    <div data-date="2017, 2018">
-                <h3>Tau Beta Pi National Convention </h3>
-                <h4>Chair of Financial Affairs Committee </h4>
+                <h3>Chair of Financial Affairs Committee</h3>
+                <h4>Tau Beta Pi National Convention </h4>
                 <ul>
 			<li> Reviewed the auditor’s and Executive Director’s reports.</li>
 			<li> Reviewed the chapter accounts receivable to TBP Headquarters.</li>
@@ -511,8 +511,8 @@
             </div> 
 		
 	    <div data-date="May 2016 - May 2017">
-                <h3>Tau Beta Pi Engineering Honor Society </h3>
-                <h4>Vice President </h4>
+                <h3>Vice President</h3>
+                <h4>Tau Beta Pi Engineering Honor Society</h4>
                 <ul>
 			<li> Assisted President of the chapter in all legal duties of the chapter.</li>
 			<li> Maintained communication and coordinated officers for chapter’s activities.</li>
@@ -520,8 +520,8 @@
             </div> 
 		
 	    <div data-date="Jan 2016 - May 2016">
-                <h3>Tau Beta Pi Engineering Honor Society </h3>
-                <h4>Webmaster</h4>
+                <h3>Webmaster</h3>
+                <h4>Tau Beta Pi Engineering Honor Society</h4>
                 <ul>
 			<li> Developed and designed a new website for chapter’s event postings and updates.</li>
 			<li> Maintained and updated the website to enhance members experience.</li>
@@ -529,8 +529,8 @@
             </div> 
 
 	    <div data-date="Aug 2015 - July 2016">
-                <h3>CSUN Cross-Cultural Friendship Club </h3>
-                <h4>Treasurer</h4>
+                <h3>Treasurer</h3>
+                <h4>CSUN Cross-Cultural Friendship Club</h4>
                 <ul>
 			<li> Handled all financial affairs, preparation of financial report and record keeping.</li>
 			<li> Prepared and defended annual budget application for organization’s activities.</li>
@@ -538,8 +538,8 @@
             </div>  
 		
 	    <div data-date="Nov 2014 - July 2015">
-                <h3>North Seattle College, International Programs </h3>
-                <h4>Marketing Photographer</h4>
+                <h3>Marketing Photographer</h3>
+                <h4>North Seattle College, International Programs</h4>
                 <ul>
 			<li> Liaised with the marketing department to visualize and design marketing materials.</li>
 			<li> Created and photographed college's community events based on the marketing needs.</li>
@@ -547,8 +547,8 @@
             </div>   
 
 	    <div data-date="Sept 2014 - May 2015">
-                <h3>North Seattle College I-Care Program </h3>
-                <h4>Volunteer</h4>
+                <h3>Volunteer</h3>
+                <h4>North Seattle College I-Care Program</h4>
                 <ul>
 			<li> Volunteered in community kitchen to prepare meals to local emergency shelters.</li>
 			<li> Packed and transported meals to shelters and facilities, and served the needy.</li>
@@ -582,7 +582,7 @@
                 <div class="col-sm-5 copyright">
 			<p>Copyright &copy 2019 Yin Fung Khong<br>
 				Contact me: yinfung96@gmail.com<br>
-				Ring Me: 206-434-2327</p>
+				Ring Me: (206) 434-2327</p>
                 </div>
 		
                 <div class="col-sm-2 top">
