--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 <h3>Intel Corporation - iCDG </h3>
                 <h4>Graduate Intern</h4>
                 <ul>
-                	<li> Designed and developed C# windows application to expedite test data analysis, by incorporating JMP and various package managers, which the calculations and graphs are populated into an excel sheet.</li>
+                	<li> Design and developped C# software application to expedite and automate test data analysis, incorporating JMP and various package managers to populate Microsoft Excel report with calculations and graphs included.</li>
 			<li> Implemented Machine Learning for pattern detection to predict the distribution type of the test data.</li>
 		</ul>
             </div>
@@ -296,7 +296,8 @@
                         <h3>A Novel Approach for Efficient Implementation of Nucleus Detection and Segmentation Using Correlated Dual Color Space</h3>
                         <p>
                             	● Researched an efficient algorithm for blood cell segmentation in microscopic blood images using digital image processing techniques, to improve and accelerate the diagnosis of different hematologic disorders.<br><br>
-				● Proposes a novel technique that exploits the correlation between the RGB and CMYK color spaces, and yields segmented nuclei that are virtually congruent to the nuclei in the initial image. 
+				● Proposed a novel technique that exploits the correlation between the RGB and CMYK color spaces, and yields segmented nuclei that are virtually congruent to the nuclei in the initial image. 
+				● Developed a highly versatile image processing technique to segment the nuclei from a broad spectrum of blood images while retaining cell features and integrity in the processed image up to 98.99% accuracy using Matlab.
 
                         </p>
                         <!--<a href="#">View Project</a>-->
