--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/AR.jpg" />
+                        <img src="images/Thesis.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
