--- a/index.html
+++ b/index.html
@@ -289,14 +289,14 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/Thesis.png" />
+                        <img src="images/ThesisProject.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>A Novel Approach for Efficient Implementation of Nucleus Detection and Segmentation Using Correlated Dual Color Space</h3>
                         <p>
                             	● Researched an efficient algorithm for blood cell segmentation in microscopic blood images using digital image processing techniques, to improve and accelerate the diagnosis of different hematologic disorders.<br><br>
-				● Proposed a novel technique that exploits the correlation between the RGB and CMYK color spaces, and yields segmented nuclei that are virtually congruent to the nuclei in the initial image. 
+				● Proposed a novel technique that exploits the correlation between the RGB and CMYK color spaces, and yields segmented nuclei that are virtually congruent to the nuclei in the initial image.<br><br> 
 				● Developed a highly versatile image processing technique to segment the nuclei from a broad spectrum of blood images while retaining cell features and integrity in the processed image up to 98.99% accuracy using Matlab.
 
                         </p>
