--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 		    
 	    	<div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/Programming-Laptop.jpg" />
+                        <img src="images/CHT.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
