--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 		    
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/Website.png"/>
+                        <img src="images/WinsApp.png"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -397,7 +397,7 @@
 
 	    	<div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/CHT.png" />
+                        <img src="images/RISCY.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -432,7 +432,7 @@
 		    
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/Zb.jpg" />
+                        <img src="images/MusicBox.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
