--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 		    
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/MusicBox.jpg" />
+                        <img src="images/MusicBox.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
