--- a/index.html
+++ b/index.html
@@ -315,8 +315,7 @@
                     <div class="project-info">
                         <h3>Personal Photography Website</h3>
                         <p>
-                            	● Installed and utilized Wordpress online tool for easier webpage creation and mangement. <br><br>
-				● Self-taught HTML/PHP/CSS/JS to modify the template and edit the content based on personal needs.<br><br>
+				● Self-taught programming languages such as HTML/PHP/CSS/JS to modify the template and edit the content based on personal needs.<br><br>
 				● Serves as a platform to showcase artworks driven by personal hobby and interest.
                         </p>
                         <a href="https://yinfungphotography.me" target="_blank">View Project</a>
