--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>A Novel Approach for Efficient Implementation of Nucleus Detection and Segmentation Using Correlated Dual Color Space (IEEE SMC 2019)</h3>
+                        <h3>A Novel Approach for Efficient Implementation of Nucleus Detection and Segmentation Using Correlated Dual Color Space (In proceedings of IEEE SMC 2019)</h3>
                         <p>
                             	● Researched an efficient algorithm for blood cell segmentation in microscopic blood images using digital image processing techniques, to improve and accelerate the diagnosis of different hematologic disorders.<br><br>
 				● Proposed a novel technique that exploits the correlation between the RGB and CMYK color spaces, and yields segmented nuclei that are virtually congruent to the nuclei in the initial image.<br><br> 
