--- a/index.html
+++ b/index.html
@@ -326,14 +326,14 @@
 		    
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/WinsApp.png"/>
+                        <img src="images/WinsApp.png"/> 
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>Automated Application Data Validator in C#</h3>
                         <p>
                             	● Assessed the process and made recommendations to implement automated validation tools to supervisors. <br><br>
-				● Utilized C# in Visual Studio IDE to develop a software tool that automates data validation, flags invalid or incomplete profile with high accuracy, and reduced human involvement and processing time up to 95%.
+				● Utilized C# in Visual Studio IDE to develop a software tool that automates data validation, flags invalid or incomplete profile with high accuracy, and reduced human involvement and processing time up to 95%.<br>
                         </p>
                         <!--<a href="https://yinfungphotography.me" >View Project</a>-->
                     </div>
