--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <div id="lead-content">
             <h1>Yin Fung Khong</h1>
             <h2>M.S./B.S. in Computer Engineering</h2>
-            <a href="CV_YinFungKhong_MSCompEngr.pdf" target="_blank" class="btn-rounded-white">View CV</a>
+            <a href="CV_YinFungKhong_MS.pdf" target="_blank" class="btn-rounded-white">View CV</a>
 		&nbsp; &nbsp;
-            <a href="RESUME_YinFungKhong_MSCompEngr.pdf" target="_blank" class="btn-rounded-white">View Resume</a>
+            <a href="RESUME_YinFungKhong_MS.pdf" target="_blank" class="btn-rounded-white">View Resume</a>
         </div>
         <!-- End #lead-content -->
 
