--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="#skills">Skills & Achievements</a>
             </li>
             <li>
-                <a href="#experience">Professional Experience</a>
+                <a href="#experience">Work Experience</a>
             </li>
 		<li>
                 <a href="#projects">Projects</a>
@@ -260,9 +260,31 @@
 
     <!-- ENGINEERING EXPERIENCE SECTION ########################################################################################################### -->	
     <div id="experience" class="background-alt">
-        <h2 class="heading">Professional Experience</h2>
+        <h2 class="heading">Work Experience</h2>
         <div id="experience-timeline">
-            <div data-date="Sept 2018 - May 2019">
+            <div data-date="Jan 2019 - May 2019">
+                <h3>CSUN-CECS Mentorship Program</h3>
+                <h4>Student Coordinator</h4>
+                <ul>
+			<li> Identified the concerns and needs of the students within the College of Engineering and Computer Science, in and outside of the classroom.</li>
+			<li> Spearheaded and piloted the mentorship program to improve students learning outcomes within the college by offering peer-to-peer mentorship through the referral of resources and share of experience.</li>
+			<li> Supported the Student Services Center and College of Engineering and Computer Science in coordinating events to address common challenges faced by students in hope of promoting retention and graduation rate.</li>
+			<li> Communicated with the student mentors to discuss mentees’ concerns and brainstorm solutions.</li>
+                </ul>
+            </div>
+
+	    <div data-date="Aug 2018 - May 2019">
+                <h3>CSUN College of Engineering and Computer Science</h3>
+                <h4>Graduate Research Assistant</h4>
+                <ul>
+			<li> Publication in Proceedings of 2019 IEEE International Conference on Systems, Man, and Cybernetics (IEEE SMC 2019).</li>
+			<li> Researched and proposed an algorithm for nucleus segmentation in microscopic blood images using digital image processing techniques, to improve the accuracy and accelerate blood diagnosis.</li>
+			<li> Developed a highly versatile image processing technique to segment the nuclei from a broad spectrum of blood images while retaining cell features and integrity in the processed image up to 98.99% accuracy using Matlab.</li>
+			<li> Developed a novel technique that exploits the correlation between two color spaces, and yields segmented nuclei that are virtually congruent to the nuclei in the initial image. </li>
+                </ul>
+            </div>
+		
+	    <div data-date="Sept 2018 - May 2019">
                 <h3>CSUN Dept. of Electrical and Computer Engineering</h3>
                 <h4>Graduate Assistant</h4>
                 <ul>
@@ -270,7 +292,18 @@
 			<li> Led weekly lab and provided feedback to improve programming technique and practice for code efficiency.</li>
                 </ul>
             </div>
-	    
+		
+	    <div data-date="Jan 2017 - May 2019">
+                <h3>CSUN Mentorship Program</h3>
+                <h4>Peer Mentor</h4>
+                <ul>
+			<li> Impacted assigned mentees positively by serving as a social and academic role model.</li>
+			<li> Helped set goals and offer support through the referral of resources available on campus.</li>
+			<li> Fostered a supportive environment with constructive feedback on performance.</li>
+			<li> Assisted students to the college environment through campus engagement, resources referral, and peer mentorship, empower students to fully experience the life in CSUN, allowing them to chart their own path to success to the following years.</li>
+                </ul>
+            </div>		
+		
 	    <div data-date="June 2018 - Aug 2018">
                 <h3>Intel Corporation - iCDG </h3>
                 <h4>Graduate Intern</h4>
@@ -494,16 +527,6 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Leadership & Involvement</h2>
         <div id="experience2-timeline">
-          
-	    <div data-date="Jan 2019 - May 2019">
-                <h3>Student Coordinator</h3>
-                <h4>College of Engineering & Computer Science (CECS) Mentorship Program</h4>
-                <ul>
-                	<li> Identified the concerns and needs of the students within the College of Engineering and Computer Science, in and outside of the classroom.</li>
-			<li> Structured and piloted the program to improve students learning outcomes within the program.</li>
-			<li> Communicated with the student mentors to discuss mentees’ concerns and brainstorm solutions.</li>
-	    </ul>
-            </div>
 
 	    <div data-date="Nov 2017 - May 2019">
                 <h3>President</h3>
@@ -525,16 +548,6 @@
 			<li> Awarded “Effective Use of Technology Award” in recruiting and promoting the organization.</li>
 		</ul>
             </div> 
-		
-            <div data-date="Jan 2017 - May 2019">
-                <h3>Peer Mentor</h3>
-                <h4>CSUN Mentorship Program</h4>
-                <ul>
-                	<li> Impacted assigned mentees positively by serving as a social and academic role model.</li>
-			<li> Helped set goals and offer support through referral of resources available on campus.</li>
-			<li> Fostered a supportive environment with constructive feedback on performance.</li>
-                </ul>
-            </div>
 		
 	    <div data-date="May 2016 - May 2019">
                 <h3>Matador Mentor</h3>
