--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="css/styles.css" rel="stylesheet">
      <link href="css/pillar-1.css" rel="stylesheet">
 	
-	<meta property="og:title" content="Title of the article">
+	<meta property='og:title' content="Title of the article">
 </head>
 
 <body>
