--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
 			<li> Re-chartered the chapter in the college, initiated over 140 members into the organization.</li>
 			<li> Coordinated officers, maintained chapter operations and defended constitution.</li>
 			<li> Maintained industrial connection, coordinate recruiting session/workshops on campus.</li>
-			<li> Awarded “Effective Use of Technology Award” in recruiting and promoting the organization.</li>
+			<li> Awarded “Effective Use of Technology Award” and "Best Leadership Award" for implementing changes in membership recruitment, chapter's marketing, events and activities, and cross-organizational events and workshops to provide unprecedented exposure and interdisciplinary interactions. </li>
 		</ul>
             </div> 
 		
