--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Highly motivated, passionate and ambitious young professional demonstrated success and dedication in academics and leadership. Detail-oriented, attentive and dependable, completed every assigned tasks and responsibilities in a timely manner with genuine commitment to quality and satisfaction with great engineering ethics and disciplines. Proactive leader and team player in organizations and extracurricular activities, integral to success of numerous projects and improvement initiatives in student affairs, both university and college level.
+                        M.S. in Computer Engineering with great knowledge and passion in hardware FPGA and ASIC design and verification. Involved in numerous RTL design projects utilizing VHDL, Verilog and System Verilog with proven knowledge of synthesis, static timing and state machines. Experienced writing synthesizable Verilog and VHDL code for ASIC & FPGA design with strong debugging skills in both Software and Hardware design. Equipped with two years of research and publication experience with excellent documentation skill.
                     </p>
                 </div>
             </div>
@@ -102,7 +102,7 @@
             <h4>California State University, Northridge</h4>
 		<!--<span class="education-date">3.95/4.00-</span>-->
             <ul>
-	        <li> Cumulative GPA: 3.95/4.0</li>
+	        <li> Cumulative GPA: 3.94/4.0</li>
                 <li> Distinction Award</li>
 	    	<li> Outstanding Graduate Award</li>
             </ul>
@@ -195,7 +195,7 @@
 						</div>
 				</li>
 				<li class="mb-2">
-				    <div class="resume-skill-name">Bahasa Malaysia</div>
+				    <div class="resume-skill-name">Malay</div>
 					<div class="progress resume-progress">
 						    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 85%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Proficient</div>
 						</div>
@@ -264,7 +264,50 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Work Experience</h2>
         <div id="experience-timeline">
-            <div data-date="Jan 2019 - May 2019">
+            <div data-date="Aug 2019 - Present">
+                <h3>ISI Language Solutions</h3>
+                <h4>Software Optimization Engineer & Project Manager Team Lead</h4>
+                <ul>
+			<li> Interacts with internal software team and production team to understand requirements and opportunities to optimize production workflow by creating and implementing various software automation tools.</li>
+			<li> Design and debug software tools utilized by the production team, saving production labor and cost by 60%.</li>
+			<li> Interacts with external vendors to communicate projects requirements while ensuring project’s progress.</li>
+			<li> Creates and presents detailed reports of progress and applicable metrics to Production Managers, ensuring efficient coordination and utilization of resources and tools while meeting 100% of projects deadlines.</li>
+			<li> Utilizes Project Management tools such as Excel, Notion.so, Mondays.com to keep track of project's progress while maintaining project's expectation and budget.</li>
+                </ul>
+            </div>
+
+            <div data-date="Aug 2018 - Jul 2020">
+                <h3>California State University, Northridge</h3>
+                <h4>Graduate Research Assistant</h4>
+                <ul>
+			<li> Published in 2019 IEEE International Conference on Systems, Man, and Cybernetics (IEEE SMC 2019).</li>
+			<li> Researched two efficient algorithms for nucleus segmentation and classification of blood cells in microscopic blood images using digital image processing techniques to accelerate and improve accuracy in blood diagnosis using MATLAB.</li>
+			<li> Developed a highly versatile image processing technique to segment the nuclei from a broad spectrum of blood images while the segmented cells maintain virtually congruent to the initial image (retaining cell features and integrity) up to 98.99% accuracy.</li>
+                </ul>
+            </div>
+		
+            <div data-date="Aug 2018 - Jul 2020">
+                <h3>California State University, Northridge</h3>
+                <h4>Graduate Assistant</h4>
+                <ul>
+			<li> Led in weekly lab sessions, provided valuable inputs, suggestions and guidance to students in safe operations of laboratory optical and electrical characterization tools such as logic analyzers and DMMs.</li>
+			<li> Assisted approximately 200 students by grading and providing feedback to students based on their performance.</li>
+			<li> Monitored student work for safe practices to maintain lab safety plan and records.</li>
+                </ul>
+            </div>
+
+            <div data-date="Jun 2018 - Aug 2020">
+                <h3>Intel Corporation</h3>
+                <h4>Hardware Verification - Graduate Intern</h4>
+                <ul>
+			<li> Developed an automation tool in C# which will process STDF files from an ATE and populate an Excel report for test data analysis, saving repetitive labor manual and processing time by 65%.</li>
+			<li> Performed detailed analysis on the existing data analysis workflow, communicated applicable metrics and specifications of the automation tool, and proposed the overall idea to the entire team for feedback.</li>
+			<li> Implemented Machine Learning for pattern detection to predict the distribution type of the test data with up 85% accuracy, and an option to turn on the feature for a comprehensive report or off for simple result.</li>
+                </ul>
+            </div>
+		
+		
+	    <div data-date="Jan 2019 - May 2019">
                 <h3>CSUN-CECS Mentorship Program</h3>
                 <h4>Student Coordinator</h4>
                 <ul>
@@ -285,16 +328,7 @@
 			<li> Developed a novel technique that exploits the correlation between two color spaces, and yields segmented nuclei that are virtually congruent to the nuclei in the initial image. </li>
                 </ul>
             </div>
-		
-	    <div data-date="Sept 2018 - May 2019">
-                <h3>CSUN Dept. of Electrical and Computer Engineering</h3>
-                <h4>Graduate Assistant</h4>
-                <ul>
-			<li> Assisted approximately 200 students, offered constructive feedback based on students’ performance.</li>
-			<li> Led weekly lab and provided feedback to improve programming technique and practice for code efficiency.</li>
-                </ul>
-            </div>
-		
+
 	    <div data-date="Jan 2017 - May 2019">
                 <h3>CSUN Mentorship Program</h3>
                 <h4>Peer Mentor</h4>
@@ -305,15 +339,6 @@
 			<li> Assisted students to the college environment through campus engagement, resources referral, and peer mentorship, empower students to fully experience the life in CSUN, allowing them to chart their own path to success to the following years.</li>
                 </ul>
             </div>		
-		
-	    <div data-date="June 2018 - Aug 2018">
-                <h3>Intel Corporation - iCDG </h3>
-                <h4>Graduate Intern</h4>
-                <ul>
-                	<li> Design and developped C# software application to expedite and automate test data analysis, incorporating JMP and various package managers to populate Microsoft Excel report with calculations and graphs included.</li>
-			<li> Implemented Machine Learning for pattern detection to predict the distribution type of the test data.</li>
-		</ul>
-            </div>
         </div>
     </div>
     <!-- End #experience --> 	
