--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 						</div>
 				</li>
 				<li class="mb-2">
-				    <div class="resume-skill-name">Verilog/S. Verilog</div>
+				    <div class="resume-skill-name">Verilog/System Verilog</div>
 					<div class="progress resume-progress">
 						    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 85%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
