--- a/index.html
+++ b/index.html
@@ -327,9 +327,8 @@
                             	● Researched an efficient algorithm for blood cell segmentation in microscopic blood images using digital image processing techniques, to improve and accelerate the diagnosis of different hematologic disorders.<br><br>
 				● Proposed a novel technique that exploits the correlation between the RGB and CMYK color spaces, and yields segmented nuclei that are virtually congruent to the nuclei in the initial image.<br><br> 
 				● Developed a highly versatile image processing technique to segment the nuclei from a broad spectrum of blood images while retaining cell features and integrity in the processed image up to 98.99% accuracy using Matlab.
-
-                        </p>
-                        <!--<a href="#">View Project</a>-->
+			</p>
+                        <a href="https://ieeexplore.ieee.org/document/8913843/metrics#metrics" target="_blank">View Paper</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
